--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
+  font_awesome_flutter: ^10.1.0
+  chewie: ^1.3.4
   firebase_auth: ^3.6.3
   firebase_core: ^1.20.1
   pinput: ^2.2.12
@@ -67,6 +69,7 @@ flutter:
   assets:
      - images/
      - json/
+     - videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
